# pgbouncer-rust-test

./: Cargo.toml
src/: main.rs
